--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #8b8e8f;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+section {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: rgba(16, 183, 203, 0.639093137254902);
+  color: #ffffff;
+  text-align: center;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -1px;
+  height: 72px;
+}
+
+.fetch {
+  height: 40px;
+  border: none;
+  outline: none;
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  background: #a0a1a1;
+  margin-bottom: 5px;
+}
+
+label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+}
+
+.wrapper {
+}
+
+.content > img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #9c9898;
+  margin-right: 20px;
+}
+
+.item {
+  opacity: 0;
+}
+
+.description {
+  color: #6d6868;
+}
+
+@media (min-width: 1440px) {
+  body {
+    max-width: 1440px;
+    margin: auto;
+  }
 }
